--- a/Tiendas_Fisicas.html
+++ b/Tiendas_Fisicas.html
@@ -7,17 +7,16 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
+            background-color: #f9f9f9;
             margin: 0;
             padding: 0;
         }
         .container {
-            width: 100%;
-            max-width: 600px;
+            max-width: 800px;
             margin: 20px auto;
-            background: #fff;
+            background: white;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
         }
         h1 {
@@ -29,21 +28,22 @@
             display: block;
             margin: 10px 0 5px;
         }
-        input, textarea, select, button {
+        input, select, textarea, button {
             width: 100%;
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
+            font-size: 16px;
         }
         button {
-            background-color: #007bff;
+            background-color: #28a745;
             color: white;
             border: none;
             cursor: pointer;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #218838;
         }
     </style>
 </head>
@@ -51,25 +51,48 @@
     <div class="container">
         <h1>Solicitud de Devolución</h1>
         <form id="devolucionForm">
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" required placeholder="Ingresa tu nombre">
+            <label for="numeroCliente">Número de Cliente</label>
+            <input type="text" id="numeroCliente" name="numeroCliente" required placeholder="Ingresa tu número de cliente">
+            
+            <label for="nombreCliente">Nombre del Cliente</label>
+            <input type="text" id="nombreCliente" name="nombreCliente" placeholder="Ingresa tu nombre">
 
-            <label for="correo">Correo Electrónico</label>
-            <input type="email" id="correo" name="correo" required placeholder="Ingresa tu correo">
-
-            <label for="producto">Producto</label>
-            <input type="text" id="producto" name="producto" required placeholder="Ingresa el nombre del producto">
-
-            <label for="motivo">Motivo de la Devolución</label>
+            <label for="motivo">Motivo de Solicitud de Devolución</label>
             <select id="motivo" name="motivo" required>
                 <option value="">Selecciona un motivo</option>
-                <option value="defectuoso">Producto defectuoso</option>
-                <option value="equivocado">Producto equivocado</option>
+                <option value="error_cliente">Error de cliente</option>
+                <option value="empresa">Atribuible a la empresa</option>
                 <option value="otros">Otros</option>
             </select>
 
-            <label for="comentarios">Comentarios Adicionales</label>
-            <textarea id="comentarios" name="comentarios" rows="4" placeholder="Agrega cualquier comentario adicional"></textarea>
+            <label for="medioPago">Medio de Pago</label>
+            <select id="medioPago" name="medioPago" required>
+                <option value="">Selecciona el medio de pago</option>
+                <option value="efectivo">Efectivo</option>
+                <option value="tarjeta_credito">Tarjeta de Crédito</option>
+                <option value="transferencia">Transferencia</option>
+            </select>
+
+            <label for="zona">Zona</label>
+            <input type="text" id="zona" name="zona" required placeholder="Ingresa tu zona">
+
+            <label for="monto">Monto de Solicitud</label>
+            <input type="number" id="monto" name="monto" required placeholder="Ingresa el monto solicitado">
+
+            <label for="cbu">CBU/CVU</label>
+            <input type="text" id="cbu" name="cbu" required placeholder="Ingresa tu CBU/CVU">
+
+            <label for="cuit">CUIT</label>
+            <input type="text" id="cuit" name="cuit" required placeholder="Ingresa tu CUIT">
+
+            <label for="observaciones">Observaciones</label>
+            <textarea id="observaciones" name="observaciones" rows="4" placeholder="Escribe observaciones adicionales"></textarea>
+
+            <label for="facturaPedido">Número de Factura o Pedido</label>
+            <input type="text" id="facturaPedido" name="facturaPedido" required placeholder="Ingresa el número de factura o pedido">
+
+            <label for="adjuntos">Datos Adjuntos</label>
+            <input type="file" id="adjuntos" name="adjuntos" multiple>
 
             <button type="submit">Enviar Solicitud</button>
         </form>
@@ -78,7 +101,7 @@
     <script>
         document.getElementById("devolucionForm").addEventListener("submit", function(e) {
             e.preventDefault();
-            alert("Formulario enviado correctamente. Procesaremos tu solicitud pronto.");
+            alert("Formulario enviado correctamente.");
         });
     </script>
 </body>
